Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,7 @@
 <body>
  <h1>olá, Mundo!</h1>
 <hr>
- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, doloremque minus. Voluptatibus quisquam odit nihil qui quibusdam doloribus aspernatur natus laboriosam reiciendis fugit laudantium ipsa repellendus, iusto totam illo excepturi!</p> 
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, doloremque minus. Voluptatibus quisquam odit nihil qui quibusdam doloribus aspernatur natus laboriosam reiciendis fugit laudantium ipsa repellendus, iusto totam illo excepturi!</p>
+ <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem laudantium nisi suscipit atque veniam sequi, facilis impedit perspiciatis voluptates quo, rem commodi ipsa rerum aut ducimus illo beatae eos expedita.</p> 
 </body>
 </html>
